force-app/main/default/objects/Webhook_Endpoint__mdt/Webhook_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Webhook Endpoint</label>
    <pluralLabel>Webhook Endpoints</pluralLabel>
</CustomObject>