force-app/main/default/objects/Webhook_Endpoint__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the webhook endpoint is active.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>