force-app/main/default/objects/Webhook_Endpoint__mdt/fields/Endpoint_Name__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Name__c</fullName>
    <description>Business name of the webhook endpoint.</description>
    <label>Endpoint Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>