force-app/main/default/objects/Webhook_Endpoint__mdt/fields/Event_Filter__c.field-meta.xml
<CustomField>
    <fullName>Event_Filter__c</fullName>
    <description
  >Semicolon-separated list of events that trigger this webhook, or All.</description>
    <label>Event Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>