force-app/main/default/objects/Webhook_Endpoint__mdt/fields/Events__c.field-meta.xml
<CustomField>
    <fullName>Events__c</fullName>
    <description
  >Comma-separated event names sent to this endpoint, such as Deal Approved or Lead Converted.</description>
    <label>Events</label>
    <length>255</length>
    <type>Text</type>
</CustomField>