force-app/main/default/objects/Webhook_Endpoint__mdt/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>Webhook endpoint URL. Add a matching Setup &gt; Remote Site
  Settings entry for this URL's domain before activating the endpoint —
  outbound Apex callouts are blocked by the platform until the destination
  is allow-listed there.</description>
    <label>URL</label>
    <type>Url</type>
</CustomField>